--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -39,31 +39,42 @@ android {
         versionNameSuffix '-beta'
     }
 
-    signingConfigs {
-        release {
-            def keystoreProps = new Properties()
-            def keystorePropsFile = rootProject.file('./.gradle/.gradlerc')
-            storeFile file('./my-release-key.keystore')
-            keyAlias 'quik_release'
-            if (keystorePropsFile.exists()) {
-                keystoreProps.load(new FileInputStream(keystorePropsFile))
-            } else if (System.getenv("CI") == "true") {
-//                do nothing
-            } else {
-                throw new GradleException("Keystore properties file not found.")
-            }
-            storePassword keystoreProps['storePassword']
-            keyPassword keystoreProps['keyPassword']
-        }
+    compileOptions {
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
+    }
+    kotlinOptions {
+        jvmTarget = "17"
+    }
+    kotlin {
+        jvmToolchain(17)
     }
 
+//    signingConfigs {
+////        release {
+////            def keystoreProps = new Properties()
+////            def keystorePropsFile = rootProject.file('./.gradle/.gradlerc')
+////            storeFile file('./my-release-key.keystore')
+////            keyAlias 'quik_release'
+////            if (keystorePropsFile.exists()) {
+////                keystoreProps.load(new FileInputStream(keystorePropsFile))
+////            } else if (System.getenv("CI") == "true") {
+//////                do nothing
+////            } else {
+////                throw new GradleException("Keystore properties file not found.")
+////            }
+////            storePassword keystoreProps['storePassword']
+////            keyPassword keystoreProps['keyPassword']
+////        }
+//    }
+
     buildTypes {
-        release {
-            minifyEnabled true
-            shrinkResources true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.release
-        }
+//        release {
+//            minifyEnabled true
+//            shrinkResources true
+//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+//            signingConfig signingConfigs.release
+//        }
     }
 
     compileOptions {
@@ -79,7 +90,7 @@ android {
     productFlavors {
         withAnalytics { dimension "analytics" }
         noAnalytics {
-            signingConfig signingConfigs.release
+            signingConfig //signingConfigs.release
         }
     }
     lint {
